<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/app_bottom"
    android:background="@color/brand_bg">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_light"
        android:background="@color/app_greyLight"
        android:alpha="0.4"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.skeleton.component.button.ImageTextButton
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:defaultImage="@drawable/ic_gnb_walk"
            app:activeImage="@drawable/ic_gnb_walk_ac"
            android:title="@string/gnbWalk"
        />
        <com.skeleton.component.button.ImageTextButton
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:activeImage="@drawable/ic_gnb_mission_ac"
            app:defaultImage="@drawable/ic_gnb_mission"
            android:title="@string/gnbMission"
            />
        <com.skeleton.component.button.ImageTextButton
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:defaultImage="@drawable/ic_gnb_explore"
            app:activeImage="@drawable/ic_gnb_explore_ac"
            android:title="@string/gnbExplore"
            />
        <com.skeleton.component.button.ImageTextButton
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:defaultImage="@drawable/ic_gnb_my"
            app:activeImage="@drawable/ic_gnb_my_ac"
            android:title="@string/gnbMy"
            />
    </LinearLayout>
</LinearLayout>