<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_light"

    >
    <com.raftgroup.pupping.scene.component.button.CategoryButton
        android:id="@+id/btnWalk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/profileWalkHistory"
        app:defaultImage="@drawable/ic_gnb_walk"
        app:defaultTextColor="@color/brand_primary"
        />
    <com.raftgroup.pupping.scene.component.button.CategoryButton
        android:id="@+id/btnMission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/profileMissionHistory"
        app:defaultImage="@drawable/ic_gnb_mission"
        app:defaultTextColor="@color/brand_primary"
        android:layout_marginTop="@dimen/margin_regular"
        />
    <com.raftgroup.pupping.scene.component.button.CategoryButton
        android:id="@+id/btnRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/profileHealthCare"
        app:defaultImage="@drawable/ic_report"
        app:defaultTextColor="@color/brand_secondary"
        android:layout_marginTop="@dimen/margin_regular"
        />

</LinearLayout>