<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/brand_secondaryExtra">

    <ImageView
        android:id="@+id/imageTop"
        android:layout_width="154dp"
        android:layout_height="167dp"
        android:layout_gravity="center"
        android:layout_marginEnd="-10dp"
        android:layout_marginTop="62dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_woman_with_dog"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="261dp"
        android:layout_height="213dp"
        android:layout_gravity="center"
        android:layout_marginEnd="-25dp"
        android:layout_marginBottom="167dp"
        android:src="@drawable/ic_man_with_dog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        style="@style/fontBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="250dp"
        android:ellipsize="end"
        android:textColor="@color/app_greyDeep"
        android:textSize="@dimen/font_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text ="@string/introText3_1" />

    <TextView
        style="@style/fontBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_regular"
        android:ellipsize="end"
        android:textColor="@color/app_greyDeep"
        android:textSize="@dimen/font_lightExtra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        android:text ="@string/introText3_2" />
    <com.raftgroup.pupping.scene.component.button.SpeechBubbleButton
        android:id="@+id/btnComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/introComplete"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>