<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@color/brand_bg"
    >
    <com.raftgroup.pupping.scene.component.tab.PageTab
        android:id="@+id/pageTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_safe_top"
        />
    <com.skeleton.component.view.RoundView
        android:id="@+id/imgProfileBox"
        android:layout_width="@dimen/profile_lightExtra"
        android:layout_height="@dimen/profile_lightExtra"
        android:radius="@dimen/profile_lightExtra_half"
        android:layout_marginTop="@dimen/margin_light"
        >
        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_empty_dog_profile"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            />
    </com.skeleton.component.view.RoundView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_light"
        >
        <TextView
            android:id="@+id/textStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/fontSemiBold"
            android:textSize="@dimen/font_lightExtra"
            tools:text="step 1"
            android:textColor="@color/brand_primary"
            />
        <TextView
            android:id="@+id/textTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            style="@style/fontSemiBold"
            android:layout_marginLeft="@dimen/font_tinyExtra"
            android:textSize="@dimen/font_lightExtra"
            tools:text="of 1"
            android:textColor="@color/app_greyLight"
            />
    </LinearLayout>
    <com.skeleton.component.view.RoundView
        android:id="@+id/graphArea"
        android:layout_width="@dimen/bar_medium"
        android:layout_height="@dimen/line_mediumExtra"
        android:radius="@dimen/radius_micro"
        android:layout_marginTop="@dimen/margin_tiny"
        android:layout_marginHorizontal="@dimen/margin_thin"
        android:background="@color/app_greyLight"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_lightExtra"
        android:scrollbars="none"
        >
        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="@dimen/margin_medium"
            />
    </ScrollView>
    <Button
        android:id="@+id/btnSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileOption"
        android:paddingHorizontal="@dimen/margin_light"
        android:background="@drawable/ef_ripple_rt_blank"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_light"
        >
        <com.skeleton.component.button.FillButton
            android:id="@+id/btnPrev"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_medium"
            android:layout_weight="1"
            android:title="@string/btnPrev"
            android:radius="@dimen/radius_lightExtra"
            app:selected="false"
            android:layout_marginRight="@dimen/margin_tinyExtra"
            />
        <com.skeleton.component.button.FillButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_medium"
            android:layout_weight="1"
            android:title="@string/btnNext"
            android:radius="@dimen/radius_lightExtra"
            app:selected="true"
            />
    </LinearLayout>
</LinearLayout>