<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/brand_bg"
    >
    <com.raftgroup.pupping.scene.component.tab.PageTab
        android:id="@+id/pageTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_safe_top"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_medium"
            android:paddingBottom="@dimen/app_bottom"
            android:layout_marginHorizontal="@dimen/margin_light"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/icon"
                    android:src="@drawable/ic_report"
                    android:layout_width="@dimen/icon_heavyLight"
                    android:layout_height="@dimen/icon_heavyLight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    />
                <TextView
                    android:id="@+id/textNickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    style="@style/fontRegular"
                    android:textSize="@dimen/font_thin"
                    tools:text="nick"
                    android:textColor="@color/app_grey"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="@dimen/margin_thin"
                    />
                <TextView
                    android:text="@string/titleWalkReport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    style="@style/fontBold"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/app_greyDeep"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintTop_toBottomOf="@id/textNickname"
                    android:layout_marginLeft="@dimen/margin_thin"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_regular"
                >

                <com.raftgroup.pupping.scene.component.info.ValueBox
                    android:id="@+id/duration"
                    app:defaultImage="@drawable/ic_time"
                    app:defaultTextColor="@color/brand_primary"
                    app:defaultBgColor="@color/brand_bg"
                    android:title="@string/reportWalkSummaryDuration"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <com.raftgroup.pupping.scene.component.info.ValueBox
                    android:id="@+id/distance"
                    app:defaultImage="@drawable/ic_walk"
                    app:defaultTextColor="@color/brand_primary"
                    app:defaultBgColor="@color/brand_bg"
                    android:title="@string/reportWalkSummaryDistance"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <FrameLayout
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_light"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/app_greyLight"
                android:alpha="0.4"
                />
            <TextView
                android:text="@string/reportWalkSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                style="@style/fontMedium"
                android:textSize="@dimen/font_thin"
                android:textColor="@color/app_grey"
                android:layout_marginTop="@dimen/margin_medium"
                />
            <com.raftgroup.pupping.scene.component.tab.MenuTab
                android:id="@+id/menuTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_regularExtra"
                />
            <com.raftgroup.pupping.scene.component.info.ArcGraph
                android:id="@+id/walkGraph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_light"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/app_greyLight"
                android:alpha="0.4"
                />
            <com.raftgroup.pupping.scene.component.info.CompareGraph
                android:id="@+id/walkCompare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>